libqt6c/src/libqscrollarea.hpp

#pragma once
#ifndef SRCC_LIBQSCROLLAREA_HPP
#define SRCC_LIBQSCROLLAREA_HPP

#include <stdbool.h>
#include <stddef.h>

#pragma GCC diagnostic ignored "-Wdeprecated-declarations"

#include "qtlibc.h"

#ifdef __cplusplus
extern "C" {
#endif

#ifdef __cplusplus
#else
typedef struct QAbstractScrollArea QAbstractScrollArea;
typedef struct QActionEvent QActionEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEnterEvent QEnterEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QFrame QFrame;
typedef struct QHideEvent QHideEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMargins QMargins;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QMoveEvent QMoveEvent;
typedef struct QObject QObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QResizeEvent QResizeEvent;
typedef struct QScrollArea QScrollArea;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QStyleOptionFrame QStyleOptionFrame;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
#endif

QScrollArea* QScrollArea_new(QWidget* parent);
QScrollArea* QScrollArea_new2();
QMetaObject* QScrollArea_MetaObject(const QScrollArea* self);
void* QScrollArea_Metacast(QScrollArea* self, const char* param1);
int QScrollArea_Metacall(QScrollArea* self, int param1, int param2, void** param3);
QWidget* QScrollArea_Widget(const QScrollArea* self);
void QScrollArea_SetWidget(QScrollArea* self, QWidget* widget);
QWidget* QScrollArea_TakeWidget(QScrollArea* self);
bool QScrollArea_WidgetResizable(const QScrollArea* self);
void QScrollArea_SetWidgetResizable(QScrollArea* self, bool resizable);
QSize* QScrollArea_SizeHint(const QScrollArea* self);
bool QScrollArea_FocusNextPrevChild(QScrollArea* self, bool next);
int QScrollArea_Alignment(const QScrollArea* self);
void QScrollArea_SetAlignment(QScrollArea* self, int alignment);
void QScrollArea_EnsureVisible(QScrollArea* self, int x, int y);
void QScrollArea_EnsureWidgetVisible(QScrollArea* self, QWidget* childWidget);
bool QScrollArea_Event(QScrollArea* self, QEvent* param1);
bool QScrollArea_EventFilter(QScrollArea* self, QObject* param1, QEvent* param2);
void QScrollArea_ResizeEvent(QScrollArea* self, QResizeEvent* param1);
void QScrollArea_ScrollContentsBy(QScrollArea* self, int dx, int dy);
QSize* QScrollArea_ViewportSizeHint(const QScrollArea* self);
void QScrollArea_EnsureVisible3(QScrollArea* self, int x, int y, int xmargin);
void QScrollArea_EnsureVisible4(QScrollArea* self, int x, int y, int xmargin, int ymargin);
void QScrollArea_EnsureWidgetVisible2(QScrollArea* self, QWidget* childWidget, int xmargin);
void QScrollArea_EnsureWidgetVisible3(QScrollArea* self, QWidget* childWidget, int xmargin, int ymargin);
void QScrollArea_OnMetaObject(const QScrollArea* self, intptr_t slot);
QMetaObject* QScrollArea_SuperMetaObject(const QScrollArea* self);
void QScrollArea_OnMetacast(QScrollArea* self, intptr_t slot);
void* QScrollArea_SuperMetacast(QScrollArea* self, const char* param1);
void QScrollArea_OnMetacall(QScrollArea* self, intptr_t slot);
int QScrollArea_SuperMetacall(QScrollArea* self, int param1, int param2, void** param3);
void QScrollArea_OnSizeHint(const QScrollArea* self, intptr_t slot);
QSize* QScrollArea_SuperSizeHint(const QScrollArea* self);
void QScrollArea_OnFocusNextPrevChild(QScrollArea* self, intptr_t slot);
bool QScrollArea_SuperFocusNextPrevChild(QScrollArea* self, bool next);
void QScrollArea_OnEvent(QScrollArea* self, intptr_t slot);
bool QScrollArea_SuperEvent(QScrollArea* self, QEvent* param1);
void QScrollArea_OnEventFilter(QScrollArea* self, intptr_t slot);
bool QScrollArea_SuperEventFilter(QScrollArea* self, QObject* param1, QEvent* param2);
void QScrollArea_OnResizeEvent(QScrollArea* self, intptr_t slot);
void QScrollArea_SuperResizeEvent(QScrollArea* self, QResizeEvent* param1);
void QScrollArea_OnScrollContentsBy(QScrollArea* self, intptr_t slot);
void QScrollArea_SuperScrollContentsBy(QScrollArea* self, int dx, int dy);
void QScrollArea_OnViewportSizeHint(const QScrollArea* self, intptr_t slot);
QSize* QScrollArea_SuperViewportSizeHint(const QScrollArea* self);
QSize* QScrollArea_MinimumSizeHint(const QScrollArea* self);
void QScrollArea_OnMinimumSizeHint(const QScrollArea* self, intptr_t slot);
QSize* QScrollArea_SuperMinimumSizeHint(const QScrollArea* self);
void QScrollArea_SetupViewport(QScrollArea* self, QWidget* viewport);
void QScrollArea_OnSetupViewport(QScrollArea* self, intptr_t slot);
void QScrollArea_SuperSetupViewport(QScrollArea* self, QWidget* viewport);
bool QScrollArea_ViewportEvent(QScrollArea* self, QEvent* param1);
void QScrollArea_OnViewportEvent(QScrollArea* self, intptr_t slot);
bool QScrollArea_SuperViewportEvent(QScrollArea* self, QEvent* param1);
void QScrollArea_PaintEvent(QScrollArea* self, QPaintEvent* param1);
void QScrollArea_OnPaintEvent(QScrollArea* self, intptr_t slot);
void QScrollArea_SuperPaintEvent(QScrollArea* self, QPaintEvent* param1);
void QScrollArea_MousePressEvent(QScrollArea* self, QMouseEvent* param1);
void QScrollArea_OnMousePressEvent(QScrollArea* self, intptr_t slot);
void QScrollArea_SuperMousePressEvent(QScrollArea* self, QMouseEvent* param1);
void QScrollArea_MouseReleaseEvent(QScrollArea* self, QMouseEvent* param1);
void QScrollArea_OnMouseReleaseEvent(QScrollArea* self, intptr_t slot);
void QScrollArea_SuperMouseReleaseEvent(QScrollArea* self, QMouseEvent* param1);
void QScrollArea_MouseDoubleClickEvent(QScrollArea* self, QMouseEvent* param1);
void QScrollArea_OnMouseDoubleClickEvent(QScrollArea* self, intptr_t slot);
void QScrollArea_SuperMouseDoubleClickEvent(QScrollArea* self, QMouseEvent* param1);
void QScrollArea_MouseMoveEvent(QScrollArea* self, QMouseEvent* param1);
void QScrollArea_OnMouseMoveEvent(QScrollArea* self, intptr_t slot);
void QScrollArea_SuperMouseMoveEvent(QScrollArea* self, QMouseEvent* param1);
void QScrollArea_WheelEvent(QScrollArea* self, QWheelEvent* param1);
void QScrollArea_OnWheelEvent(QScrollArea* self, intptr_t slot);
void QScrollArea_SuperWheelEvent(QScrollArea* self, QWheelEvent* param1);
void QScrollArea_ContextMenuEvent(QScrollArea* self, QContextMenuEvent* param1);
void QScrollArea_OnContextMenuEvent(QScrollArea* self, intptr_t slot);
void QScrollArea_SuperContextMenuEvent(QScrollArea* self, QContextMenuEvent* param1);
void QScrollArea_DragEnterEvent(QScrollArea* self, QDragEnterEvent* param1);
void QScrollArea_OnDragEnterEvent(QScrollArea* self, intptr_t slot);
void QScrollArea_SuperDragEnterEvent(QScrollArea* self, QDragEnterEvent* param1);
void QScrollArea_DragMoveEvent(QScrollArea* self, QDragMoveEvent* param1);
void QScrollArea_OnDragMoveEvent(QScrollArea* self, intptr_t slot);
void QScrollArea_SuperDragMoveEvent(QScrollArea* self, QDragMoveEvent* param1);
void QScrollArea_DragLeaveEvent(QScrollArea* self, QDragLeaveEvent* param1);
void QScrollArea_OnDragLeaveEvent(QScrollArea* self, intptr_t slot);
void QScrollArea_SuperDragLeaveEvent(QScrollArea* self, QDragLeaveEvent* param1);
void QScrollArea_DropEvent(QScrollArea* self, QDropEvent* param1);
void QScrollArea_OnDropEvent(QScrollArea* self, intptr_t slot);
void QScrollArea_SuperDropEvent(QScrollArea* self, QDropEvent* param1);
void QScrollArea_KeyPressEvent(QScrollArea* self, QKeyEvent* param1);
void QScrollArea_OnKeyPressEvent(QScrollArea* self, intptr_t slot);
void QScrollArea_SuperKeyPressEvent(QScrollArea* self, QKeyEvent* param1);
void QScrollArea_ChangeEvent(QScrollArea* self, QEvent* param1);
void QScrollArea_OnChangeEvent(QScrollArea* self, intptr_t slot);
void QScrollArea_SuperChangeEvent(QScrollArea* self, QEvent* param1);
void QScrollArea_InitStyleOption(const QScrollArea* self, QStyleOptionFrame* option);
void QScrollArea_OnInitStyleOption(const QScrollArea* self, intptr_t slot);
void QScrollArea_SuperInitStyleOption(const QScrollArea* self, QStyleOptionFrame* option);
int QScrollArea_DevType(const QScrollArea* self);
void QScrollArea_OnDevType(const QScrollArea* self, intptr_t slot);
int QScrollArea_SuperDevType(const QScrollArea* self);
void QScrollArea_SetVisible(QScrollArea* self, bool visible);
void QScrollArea_OnSetVisible(QScrollArea* self, intptr_t slot);
void QScrollArea_SuperSetVisible(QScrollArea* self, bool visible);
int QScrollArea_HeightForWidth(const QScrollArea* self, int param1);
void QScrollArea_OnHeightForWidth(const QScrollArea* self, intptr_t slot);
int QScrollArea_SuperHeightForWidth(const QScrollArea* self, int param1);
bool QScrollArea_HasHeightForWidth(const QScrollArea* self);
void QScrollArea_OnHasHeightForWidth(const QScrollArea* self, intptr_t slot);
bool QScrollArea_SuperHasHeightForWidth(const QScrollArea* self);
QPaintEngine* QScrollArea_PaintEngine(const QScrollArea* self);
void QScrollArea_OnPaintEngine(const QScrollArea* self, intptr_t slot);
QPaintEngine* QScrollArea_SuperPaintEngine(const QScrollArea* self);
void QScrollArea_KeyReleaseEvent(QScrollArea* self, QKeyEvent* event);
void QScrollArea_OnKeyReleaseEvent(QScrollArea* self, intptr_t slot);
void QScrollArea_SuperKeyReleaseEvent(QScrollArea* self, QKeyEvent* event);
void QScrollArea_FocusInEvent(QScrollArea* self, QFocusEvent* event);
void QScrollArea_OnFocusInEvent(QScrollArea* self, intptr_t slot);
void QScrollArea_SuperFocusInEvent(QScrollArea* self, QFocusEvent* event);
void QScrollArea_FocusOutEvent(QScrollArea* self, QFocusEvent* event);
void QScrollArea_OnFocusOutEvent(QScrollArea* self, intptr_t slot);
void QScrollArea_SuperFocusOutEvent(QScrollArea* self, QFocusEvent* event);
void QScrollArea_EnterEvent(QScrollArea* self, QEnterEvent* event);
void QScrollArea_OnEnterEvent(QScrollArea* self, intptr_t slot);
void QScrollArea_SuperEnterEvent(QScrollArea* self, QEnterEvent* event);
void QScrollArea_LeaveEvent(QScrollArea* self, QEvent* event);
void QScrollArea_OnLeaveEvent(QScrollArea* self, intptr_t slot);
void QScrollArea_SuperLeaveEvent(QScrollArea* self, QEvent* event);
void QScrollArea_MoveEvent(QScrollArea* self, QMoveEvent* event);
void QScrollArea_OnMoveEvent(QScrollArea* self, intptr_t slot);
void QScrollArea_SuperMoveEvent(QScrollArea* self, QMoveEvent* event);
void QScrollArea_CloseEvent(QScrollArea* self, QCloseEvent* event);
void QScrollArea_OnCloseEvent(QScrollArea* self, intptr_t slot);
void QScrollArea_SuperCloseEvent(QScrollArea* self, QCloseEvent* event);
void QScrollArea_TabletEvent(QScrollArea* self, QTabletEvent* event);
void QScrollArea_OnTabletEvent(QScrollArea* self, intptr_t slot);
void QScrollArea_SuperTabletEvent(QScrollArea* self, QTabletEvent* event);
void QScrollArea_ActionEvent(QScrollArea* self, QActionEvent* event);
void QScrollArea_OnActionEvent(QScrollArea* self, intptr_t slot);
void QScrollArea_SuperActionEvent(QScrollArea* self, QActionEvent* event);
void QScrollArea_ShowEvent(QScrollArea* self, QShowEvent* event);
void QScrollArea_OnShowEvent(QScrollArea* self, intptr_t slot);
void QScrollArea_SuperShowEvent(QScrollArea* self, QShowEvent* event);
void QScrollArea_HideEvent(QScrollArea* self, QHideEvent* event);
void QScrollArea_OnHideEvent(QScrollArea* self, intptr_t slot);
void QScrollArea_SuperHideEvent(QScrollArea* self, QHideEvent* event);
bool QScrollArea_NativeEvent(QScrollArea* self, const libqt_string eventType, void* message, intptr_t* result);
void QScrollArea_OnNativeEvent(QScrollArea* self, intptr_t slot);
bool QScrollArea_SuperNativeEvent(QScrollArea* self, const libqt_string eventType, void* message, intptr_t* result);
int QScrollArea_Metric(const QScrollArea* self, int param1);
void QScrollArea_OnMetric(const QScrollArea* self, intptr_t slot);
int QScrollArea_SuperMetric(const QScrollArea* self, int param1);
void QScrollArea_InitPainter(const QScrollArea* self, QPainter* painter);
void QScrollArea_OnInitPainter(const QScrollArea* self, intptr_t slot);
void QScrollArea_SuperInitPainter(const QScrollArea* self, QPainter* painter);
QPaintDevice* QScrollArea_Redirected(const QScrollArea* self, QPoint* offset);
void QScrollArea_OnRedirected(const QScrollArea* self, intptr_t slot);
QPaintDevice* QScrollArea_SuperRedirected(const QScrollArea* self, QPoint* offset);
QPainter* QScrollArea_SharedPainter(const QScrollArea* self);
void QScrollArea_OnSharedPainter(const QScrollArea* self, intptr_t slot);
QPainter* QScrollArea_SuperSharedPainter(const QScrollArea* self);
void QScrollArea_InputMethodEvent(QScrollArea* self, QInputMethodEvent* param1);
void QScrollArea_OnInputMethodEvent(QScrollArea* self, intptr_t slot);
void QScrollArea_SuperInputMethodEvent(QScrollArea* self, QInputMethodEvent* param1);
QVariant* QScrollArea_InputMethodQuery(const QScrollArea* self, int param1);
void QScrollArea_OnInputMethodQuery(const QScrollArea* self, intptr_t slot);
QVariant* QScrollArea_SuperInputMethodQuery(const QScrollArea* self, int param1);
void QScrollArea_TimerEvent(QScrollArea* self, QTimerEvent* event);
void QScrollArea_OnTimerEvent(QScrollArea* self, intptr_t slot);
void QScrollArea_SuperTimerEvent(QScrollArea* self, QTimerEvent* event);
void QScrollArea_ChildEvent(QScrollArea* self, QChildEvent* event);
void QScrollArea_OnChildEvent(QScrollArea* self, intptr_t slot);
void QScrollArea_SuperChildEvent(QScrollArea* self, QChildEvent* event);
void QScrollArea_CustomEvent(QScrollArea* self, QEvent* event);
void QScrollArea_OnCustomEvent(QScrollArea* self, intptr_t slot);
void QScrollArea_SuperCustomEvent(QScrollArea* self, QEvent* event);
void QScrollArea_ConnectNotify(QScrollArea* self, const QMetaMethod* signal);
void QScrollArea_OnConnectNotify(QScrollArea* self, intptr_t slot);
void QScrollArea_SuperConnectNotify(QScrollArea* self, const QMetaMethod* signal);
void QScrollArea_DisconnectNotify(QScrollArea* self, const QMetaMethod* signal);
void QScrollArea_OnDisconnectNotify(QScrollArea* self, intptr_t slot);
void QScrollArea_SuperDisconnectNotify(QScrollArea* self, const QMetaMethod* signal);
void QScrollArea_SetViewportMargins(QScrollArea* self, int left, int top, int right, int bottom);
void QScrollArea_OnSetViewportMargins(QScrollArea* self, intptr_t slot);
void QScrollArea_SuperSetViewportMargins(QScrollArea* self, int left, int top, int right, int bottom);
QMargins* QScrollArea_ViewportMargins(const QScrollArea* self);
void QScrollArea_OnViewportMargins(const QScrollArea* self, intptr_t slot);
QMargins* QScrollArea_SuperViewportMargins(const QScrollArea* self);
void QScrollArea_DrawFrame(QScrollArea* self, QPainter* param1);
void QScrollArea_OnDrawFrame(QScrollArea* self, intptr_t slot);
void QScrollArea_SuperDrawFrame(QScrollArea* self, QPainter* param1);
void QScrollArea_UpdateMicroFocus(QScrollArea* self);
void QScrollArea_OnUpdateMicroFocus(QScrollArea* self, intptr_t slot);
void QScrollArea_SuperUpdateMicroFocus(QScrollArea* self);
void QScrollArea_Create(QScrollArea* self);
void QScrollArea_OnCreate(QScrollArea* self, intptr_t slot);
void QScrollArea_SuperCreate(QScrollArea* self);
void QScrollArea_Destroy(QScrollArea* self);
void QScrollArea_OnDestroy(QScrollArea* self, intptr_t slot);
void QScrollArea_SuperDestroy(QScrollArea* self);
bool QScrollArea_FocusNextChild(QScrollArea* self);
void QScrollArea_OnFocusNextChild(QScrollArea* self, intptr_t slot);
bool QScrollArea_SuperFocusNextChild(QScrollArea* self);
bool QScrollArea_FocusPreviousChild(QScrollArea* self);
void QScrollArea_OnFocusPreviousChild(QScrollArea* self, intptr_t slot);
bool QScrollArea_SuperFocusPreviousChild(QScrollArea* self);
QObject* QScrollArea_Sender(const QScrollArea* self);
void QScrollArea_OnSender(const QScrollArea* self, intptr_t slot);
QObject* QScrollArea_SuperSender(const QScrollArea* self);
int QScrollArea_SenderSignalIndex(const QScrollArea* self);
void QScrollArea_OnSenderSignalIndex(const QScrollArea* self, intptr_t slot);
int QScrollArea_SuperSenderSignalIndex(const QScrollArea* self);
int QScrollArea_Receivers(const QScrollArea* self, const char* signal);
void QScrollArea_OnReceivers(const QScrollArea* self, intptr_t slot);
int QScrollArea_SuperReceivers(const QScrollArea* self, const char* signal);
bool QScrollArea_IsSignalConnected(const QScrollArea* self, const QMetaMethod* signal);
void QScrollArea_OnIsSignalConnected(const QScrollArea* self, intptr_t slot);
bool QScrollArea_SuperIsSignalConnected(const QScrollArea* self, const QMetaMethod* signal);
void QScrollArea_Delete(QScrollArea* self);

#ifdef __cplusplus
} /* extern C */
#endif

#endif